# WP-Robot

./: README  README.md
Robot/: Makefile  comm_main.c
Robot/include/: middleware.h  mood_system.h  mood_system_v1.h  mood_system_v3.h  oledfont.h  oledfont_v1.h  oledfont_v2.h  robot_utils.h  wp_config.h  wp_middleware.h  wp_mood_sys.h  wp_thread_pool.h  wp_utils.h
Robot/lib/: Makefile  oledfont.c
Robot/src/: main.c  main_v1.c  middleware.c  mood_system.c  mood_system_v1.c  mood_system_v2.c  mood_system_v3.c  oledfont.c  oledfont_v1.c  oledfont_v2.c  robot_utils.c  wp_middleware.c  wp_mood_sys.c  wp_thread_pool.c  wp_utils.c
camera/: camera-256.c  camera-64-2.c  camera-example.c
cvimpi/: CMakeLIsts.txt  CMakeLists.txt~  build.sh  build.sh~
cvimpi/src/: main.c  main.c~
drivers/chardev/: chardev.c  driver_main.c
drivers/key/: key.c
drivers/ofdts/: ofdts.c
drivers/platform1/: leddevice.c  leddriver.c
drivers/platform2/: leddriver.c
drivers/tasklet/: tasklet.c
drivers/timer/: driver_main.c  timer.c
freertos/: build.sh  comm_main.c  duo_include.h  duo_reg.h  duo_src.c  duo_src_test.c  example.c  freertos.sh  milkv_duo_reg.h  oled_font.h  rtos_cmdqu.h
freertos/backup/: duo_include.h  duo_oled.c
gpio/: example.c  io-i2c.c
linux/opencv/: CMakeLists.txt  send.sh
oled/: 0.96oled.c  oled_font.h
opencv/: main.c  main.cpp
shell/: CMakeLists.txt  CMakeLists2.txt  Makefile  fip-build.sh
study/: comm_main.c  test.c
test/: Makefile  main.c  mood_system_test.c  test.c
u_build/: Makefile  README.zh.md  boot.sd  cv1800b_milkv_duo_sd.dtb  dump.sh
(+79 files in other folders)
